fixed border-radius on mobile

--- a/index.css
+++ b/index.css
@@ -301,8 +301,8 @@ body {
 #newsletter-input {
 	font-family: 'Montserrat', sans-serif;
 	border: none;
-	border-top-left-radius: 2px;
-	border-bottom-left-radius: 2px;
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
 	padding-left: 7px;
 	-webkit-appearance: none;
 	-moz-appearance: none;
@@ -321,8 +321,8 @@ body {
 	font-weight: 700;
 	text-decoration: none;
 	font-size: 13px;
-	border-top-right-radius: 2px;
-	border-bottom-right-radius: 2px;
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
 	padding: 5px;
 	-webkit-appearance: none;
 	-moz-appearance: none;
